--- a/Admin/package.json
+++ b/Admin/package.json
@@ -12,7 +12,10 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "date-fns": "^3.2.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.1",
     "leaflet": "^1.9.4",
+    "moment": "^2.30.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-leaflet": "^4.2.1",
