--- a/Admin/package.json
+++ b/Admin/package.json
@@ -4,30 +4,31 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.4",
-    "@material-ui/data-grid": "^4.0.0-alpha.29",
-    "@material-ui/icons": "^4.11.2",
+    "@material-ui/data-grid": "^4.0.0-alpha.35",
+    "@material-ui/icons": "^4.11.3",
     "@react-google-maps/api": "^2.19.2",
-    "@reduxjs/toolkit": "^2.0.1",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "date-fns": "^3.2.0",
+    "@reduxjs/toolkit": "^2.1.0",
+    "@testing-library/jest-dom": "^6.4.1",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
+    "axios": "^1.6.7",
+    "date-fns": "^3.3.1",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.1",
     "leaflet": "^1.9.4",
     "moment": "^2.30.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
-    "react-loader-spinner": "^6.0.0-0",
-    "react-redux": "^9.0.4",
+    "react-loader-spinner": "^6.1.6",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "recharts": "^2.0.9",
+    "react-scripts": "5.0.1",
+    "recharts": "^2.11.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "use-places-autocomplete": "^4.0.1",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^3.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
