--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-minimal-pie-chart": "^8.4.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.20.1",
