--- a/Admin/package.json
+++ b/Admin/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "recharts": "^2.11.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
